--- a/css/assets/_index.scss
+++ b/css/assets/_index.scss
@@ -11,7 +11,7 @@ main {
             font-size: 80px;
             font-weight: 500;
             text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
-            font-family: 'Dancing Script', cursive;
+            font-family: $fontInspiration;
             margin-top: 0;
 
             &:hover {
@@ -19,12 +19,29 @@ main {
                 transform: translateY(-5px);
                 color: #c090ff;
             }
+
+            @include mobile {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: #fff;
+                margin: 7px 0;
+                font-size: 40px;
+                font-weight: 500;
+                text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
+                font-family: 'Dancing Script', cursive;
+                margin-top: 0;
+            }
         }
 
         .descripcion {
-            font-family: 'Dancing Script', cursive;
+            font-family: $fontGothic;
             color: #ffffff75;
-            font-size: 30px;
+            font-size: 20px;
+
+            @include mobile {
+                font-size: 10px;
+            }
         }
     }
 
@@ -38,13 +55,13 @@ main {
         gap: 90px;
 
         .card {
-            background-color: #eacaff;
+            background-color: $segundoColor;
 
             &__title {
-                font-family: HighSpirited;
-                font-size: 64px;
+                font-family: $fontInspiration;
+                color: $primerColor;
+                font-size: 3.5rem;
                 text-decoration: underline;
-                color: whitesmoke;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
@@ -52,9 +69,10 @@ main {
             }
 
             &__text {
-                font-family: CenturyGothic;
+                font-family: $fontGothic;
                 line-height: 0.9;
                 text-align: center;
+                color: white;
             }
         }
     }
