--- a/css/assets/_reset.scss
+++ b/css/assets/_reset.scss
@@ -2,14 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: none;
-}
 
-@font-face {    
-    font-family: "HighSpirited";
-    src: url(../fonts/High\ Spirited.ttf);
-}
-
-@font-face {
-    font-family: "CenturyGothic";
-    src: url(../fonts/Century\ Gothic\ Normal.TTF);
+    &::selection {
+        background-color: $cuartoColor;
+        color: $segundoColor;
+    }
 }
