--- a/css/main_modificado.css
+++ b/css/main_modificado.css
@@ -494,7 +494,7 @@
       padding-left: 30px; 
     }
      */
-    
+/*     
     input{
         background-color: #fbfbfb; 
         width: 408px; 
@@ -577,7 +577,7 @@
     }
      */
     
-    p{
+    /* p{
         font-size: 14px; 
         color: #0e0e0e; 
     }
@@ -603,4 +603,4 @@
         outline:0;
         border: 1px solid #97d848;
     }
-    
+     */ */
