--- a/css/assets/_footer.scss
+++ b/css/assets/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: #eacaff;
+    background-color: $primerColor;
     padding: 0.5rem;
 
     .translate {
@@ -7,7 +7,7 @@ footer {
 
         &:hover {
             transform: translateY(-5px);
-            color: #5f2da1;
+            color: $tercerColor;
             font-weight: bold;
             filter: brightness(1)
         }
