--- a/css/assets/_index.scss
+++ b/css/assets/_index.scss
@@ -19,19 +19,6 @@ main {
                 transform: translateY(-5px);
                 color: #c090ff;
             }
-
-            @include mobile {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: #fff;
-                margin: 7px 0;
-                font-size: 40px;
-                font-weight: 500;
-                text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
-                font-family: 'Dancing Script', cursive;
-                margin-top: 0;
-            }
         }
 
         .descripcion {
@@ -40,7 +27,15 @@ main {
             font-size: 20px;
 
             @include mobile {
-                font-size: 10px;
+                position: absolute;
+                opacity: 0%;
+            }
+        }
+
+        .boton {
+            @include mobile {
+                position: absolute;
+                opacity: 0%;
             }
         }
     }
