--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@
   color: #5e548e;
 }
 .navegacion .menu ul li a:hover {
-  background-color: #231942;
+  background-color: #5e548e;
   color: #eacaff;
   transition: 500ms;
   transform: translateY(-1px);
@@ -67,16 +67,21 @@
   font-weight: bold;
   text-decoration: none;
   font-size: 24px;
-  color: #231942;
 }
-.navegacion .menu .translate .links {
+.navegacion .menu .translate .inicio:hover {
+  color: white;
+}
+.navegacion .menu .links {
   font-family: "CenturyGothic";
   font-weight: bold;
   text-decoration: none;
   font-size: 20px;
-  color: #9f86c0;
 }
-.navegacion .logo {
+.navegacion .menu .links:hover {
+  color: white;
+}
+
+.logo {
   width: 55px;
   display: flex;
   flex-direction: row;
@@ -128,6 +133,18 @@ main .carrusel .descripcion {
   color: rgba(255, 255, 255, 0.4588235294);
   font-size: 20px;
 }
+@media screen and (max-width: 768px) {
+  main .carrusel .descripcion {
+    position: absolute;
+    opacity: 0%;
+  }
+}
+@media screen and (max-width: 768px) {
+  main .carrusel .boton {
+    position: absolute;
+    opacity: 0%;
+  }
+}
 main .seccion2 {
   padding: 40px;
   display: flex;
@@ -163,6 +180,14 @@ main .seccion2 .card__text {
   grid-template-rows: repeat(5, 1fr);
   grid-template-areas: "imagen titulo1 titulo1" "imagen text1 text1" "imagen text1 text1" "imagen text2 text2" "imagen text2 text2";
 }
+@media screen and (max-width: 768px) {
+  .grid4 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-areas: "titulo titulo" "imagen imagen" "imagen imagen" "imagen imagen" "text1 text1" "text1 text1" "text2 text2" "text2 text2";
+  }
+}
 .grid4 .grid4__img {
   display: cover;
   grid-area: imagen;
@@ -193,6 +218,16 @@ main .seccion2 .card__text {
   grid-template-rows: repeat(5, 1fr);
   grid-template-areas: "img1 img2 titulo titulo" "img1 img2 parrafo parrafo" "img1 img2 parrafo parrafo" "img1 img2 parrafo parrafo";
 }
+@media screen and (max-width: 768px) {
+  .grid1 {
+    max-height: 200px;
+    max-width: 768px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "img1 img2" "img1 img2" "titulo titulo" "parrafo parrafo";
+  }
+}
 .grid1 .grid1__img1 {
   grid-area: img1;
 }
@@ -215,6 +250,28 @@ main .seccion2 .card__text {
   grid-template-areas: "titulo1 titulo1 imge1 imge2" "parrafo1 parrafo1 imge1 imge2" "parrafo1 parrafo1 imge1 imge2" "parrafo1 parrafo1 imge1 imge2";
   -moz-column-gap: 4px;
        column-gap: 4px;
+}
+@media screen and (max-width: 768px) {
+  .grid2 {
+    max-height: 200px;
+    max-width: 768px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "img1 img2" "img1 img2" "titulo titulo" "parrafo parrafo";
+  }
+  .grid2 .grid2__img1 {
+    grid-area: img1;
+  }
+  .grid2 .grid2__img2 {
+    grid-area: img2;
+  }
+  .grid2 .grid2__titulo {
+    grid-area: titulo;
+  }
+  .grid2 .grid2__parrafo {
+    grid-area: parrafo;
+  }
 }
 .grid2 .grid2__img1 {
   grid-area: imge1;
@@ -240,6 +297,14 @@ main .seccion2 .card__text {
   grid-template-areas: "titagen titagen titagen titagen titagen titagen titagen titagen" "mes1 mes1 mes2 mes2 form form form form" "mes1 mes1 mes2 mes2 form form form form" "mes3 mes3 mes4 mes4 form form form form" "mes3 mes3 mes4 mes4 form form form form";
   gap: 5px;
   padding: 0;
+}
+@media screen and (max-width: 768px) {
+  .grid3 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-areas: "titagen titagen" "mes1 mes1" "mes2 mes2" "mes3 mes3" "mes4 mes4" "form form" "form form";
+  }
 }
 .grid3 .tituloagenda {
   text-align: center;
