--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,11 @@
   display: flex;
   align-items: center;
 }
+@media screen and (max-width: 768px) {
+  .navegacion .menu {
+    background-color: black;
+  }
+}
 .navegacion .menu ul {
   background-color: #e4c2fa;
   font-family: "CenturyGothic";
@@ -88,6 +93,12 @@
   justify-items: flex-start;
   align-items: flex-start;
   animation: RotateIn 5s;
+}
+@media screen and (max-width: 768px) {
+  .logo {
+    position: absolute;
+    opacity: 0%;
+  }
 }
 
 footer {
@@ -174,40 +185,75 @@ main .seccion2 .card__text {
   color: white;
 }
 
-.grid4 {
+.parent {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-template-areas: "imagen titulo1 titulo1" "imagen text1 text1" "imagen text1 text1" "imagen text2 text2" "imagen text2 text2";
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  height: 130vh;
 }
-@media screen and (max-width: 768px) {
-  .grid4 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    grid-template-areas: "titulo titulo" "imagen imagen" "imagen imagen" "imagen imagen" "text1 text1" "text1 text1" "text2 text2" "text2 text2";
-  }
+.parent .subtitulosm {
+  font-family: "HighSpirited";
+  text-decoration: underline;
+  color: #9f86c0;
+  font-size: 70px;
+  text-align: start;
+  padding-left: 4rem;
 }
-.grid4 .grid4__img {
-  display: cover;
-  grid-area: imagen;
+.parent .parrafosm {
+  color: #231942;
+  font-family: "CenturyGothic";
+  font-size: 1.2rem;
+  text-align: start;
+  padding-inline: 4rem;
 }
-.grid4 .grid4__titulo {
+.parent .div1 {
+  grid-area: 1/1/2/9;
+}
+.parent .div1 h1 {
+  background-image: url(/images/contacto.jpeg);
+  height: 100%;
+  color: #5e548e;
   font-family: "Inspiration";
-  grid: titulo1;
+  font-size: 7rem;
+  text-align: center;
+  padding-top: 1rem;
 }
-.grid4 .grid4__titulo h1 {
-  font-size: 120px;
+.parent .div2 {
+  grid-area: 2/1/8/4;
+  justify-content: center;
+  align-items: center;
 }
-.grid4 .grid4__texto1 {
-  background-color: blue;
+.parent .div2 img {
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
-  grid-area: text1;
+  height: 100%;
 }
-.grid4 .grid4__texto2 {
-  background-color: purple;
-  width: 100%;
-  grid-area: text2;
+.parent .div3 {
+  grid-area: 2/4/3/9;
+}
+.parent .div3 h3 {
+  padding-top: 4rem;
+}
+.parent .div4 {
+  grid-area: 3/4/3/9;
+}
+.parent .div5 {
+  margin-top: 175px;
+  margin-bottom: 250px;
+  grid-area: 5/4/3/9;
+}
+.parent .div6 {
+  grid-area: 8/4/4/9;
+  padding-bottom: 8rem;
+  margin-top: 75px;
+}
+.parent .div6 h4 {
+  font-family: "HighSpirited";
+  color: #9f86c0;
+  font-size: 50px;
+  text-align: center;
+  padding-inline: 4rem;
 }
 
 .grid1 {
